--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "file-loader": "^0.11.1",
     "group-css-media-queries-loader": "^1.0.0",
     "html-webpack-plugin": "^2.28.0",
+    "less": "^2.7.3",
     "node-sass": "^4.5.2",
     "prop-types": "^15.5.8",
     "strip-loader": "^0.1.2",
